Related work and conclusions

--- a/academic/ifl2007/supero.bib
+++ b/academic/ifl2007/supero.bib
@@ -319,6 +319,33 @@
     _address =      "New York, NY, USA",
 }
 
+@inproceedings{wadler:deforestation,
+    author = "P. Wadler",
+    title = "Deforestation: Transforming Programs to Eliminate Trees",
+    booktitle = "Proc {ESOP} '88",
+    volume = "300",
+    series =        "LNCS",
+    publisher = "Berlin:\ Springer-Verlag",
+    pages = "344--358",
+    year = "1988",
+}
+
+@inproceedings{spj:unboxing,
+    author = "Simon {Peyton Jones} and John Launchbury",
+    title = "Unboxed Values as First Class Citizens in a Non-strict Functional Language",
+    booktitle = "Proc FPCA '91",
+    month = "August",
+    volume = "523",
+    series = "LNCS"
+    publisher = "Springer-Verlag",
+    address = "Cambridge, Massachussets, USA",
+    editor = "J. Hughes",
+    pages = "636--666",
+    year = "1991",
+}
+
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
