--- a/academic/ifl2007/supero.tex
+++ b/academic/ifl2007/supero.tex
@@ -320,13 +320,13 @@ In this program |caf| would only be computed once. If a CAF function is inlined 
 
 \section{Benchmarks Versus C}
 
-The most comprehensive inter-language benchmarking effort is the Programming Language Shootout \cite{shootout}. In the shootout a variety of programming tasks are implemented in many languages and benchmarked against each other. Unfortunately, in order to ensure a balanced comparison, many restrictions are placed on the programs -- some of which severely hamper lazy languages. Inspired by their attempt, we have attempted to define some simpler benchmarks on which it is possible to directly compare Haskell to C.
+The most comprehensive inter-language benchmarking effort is the Programming Language Shootout shootout\footnote{\url{http://shootout.alioth.debian.org/}}. In the shootout a variety of programming tasks are implemented in many languages and benchmarked against each other. Unfortunately, in order to ensure a balanced comparison, many restrictions are placed on the programs -- some of which severely hamper lazy languages. Inspired by their attempt, we have attempted to define some simpler benchmarks on which it is possible to directly compare Haskell to C.
 
 The set of benchmarks we have chosen are inspired by the Unix \texttt{wc} command -- namely character, word and line counting. In all cases we require the program to read from the standard input, and write out the number of elements in the file. In order to ensure that we test computation speed, not IO speed (which is usually a product of buffering strategy, rather than optimisation prowess) we demand that all input is read using the standard C |getchar| function only. Any buffering improvements, such as reading in blocks or memory mapping of files, could be performed equally in all compilers.
 
 All the C versions are implemented following a similar pattern to Figure \ref{fig:c_words}. Characters are read in a loop, with an accumulator recording the current value. Depending on the program, the body of the loop decides when to increment the accumulator. The Haskell versions all follow the same pattern as in the Introduction, merely replacing |words| with |lines|, or removing the |words| function for character counting.
 
-We performed all benchmarks on a Windows XP, 3GHz processor, 1Gb RAM machine. All benchmarks were run over a 50Mb log file, repeated 10 times, and the lowest value was taken. The C versions used GCC \cite{gcc} version 3.4.2 with -O3. The Haskell version used GHC \cite{ghc} 6.6.1 with -O2. The Supero version was compiled using our optimiser, then written back as a Haskell file, and compiled once more with GHC 6.6.1 and -O2.
+We performed all benchmarks on a Windows XP, 3GHz processor, 1Gb RAM machine. All benchmarks were run over a 50Mb log file, repeated 10 times, and the lowest value was taken. The C versions used GCC\footnote{\url{http://gcc.gnu.org/}} version 3.4.2 with -O3. The Haskell version used GHC \cite{ghc} 6.6.1 with -O2. The Supero version was compiled using our optimiser, then written back as a Haskell file, and compiled once more with GHC 6.6.1 and -O2.
 
 \begin{fig}
 \vspace{7mm}
@@ -372,7 +372,7 @@ As part of our benchmarks, we have identified two bottlenecks in the Haskell ver
 
 \paragraph{Slow \textsf{isSpace} function}
 
-The first issue is that |isSpace| in Haskell is 79\perc more expensive than |isspace| in C. The simplest solution is to use a FFI (Foreign Function Interface) \cite{haskell_ffi} call to the C |isspace| function in all cases, removing this factor from the benchmark. A GHC bug (number 1473) has been filed about the slow performance of |isSpace|.
+The first issue is that |isSpace| in Haskell is 79\perc more expensive than |isspace| in C. The simplest solution is to use a FFI (Foreign Function Interface) \cite{spj:awkward_squad} call to the C |isspace| function in all cases, removing this factor from the benchmark. A GHC bug (number 1473) has been filed about the slow performance of |isSpace|.
 
 \begin{fig}
 \begin{code}
@@ -498,15 +498,15 @@ The existence of a termination bound with the present degree of sensitivity is a
 
 \section{Related Work}
 
-\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{partial_evaluation}, where a program is specialised with respect to some static data. Typically the emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with a partial program to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futanama Projection \cite{futanama:projections}. The difference between our work that partial evaluation is that we do fold back definitions, and perform no binding time analysis. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements.
+\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. Typically the emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with a partial program to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work that partial evaluation is that we do fold back definitions, and perform no binding time analysis. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements.
 
-\paragraph{Deforestation} The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{higher_order_deforestation} and work on non-list types \cite{non_list_deforestation}. Probably the most practically motivated work on deforestation has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{short_cut_deforestation}, and newer approaches such as stream fusion \cite{stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs. Fusion is limited to cases where the correct underlying function is used -- sometimes this requires unnatural definitions.
+\paragraph{Deforestation} The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. Probably the most practically motivated work on deforestation has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{gill:shortcut_deforestation}, and newer approaches such as stream fusion \cite{coutts:stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs. Fusion is limited to cases where the correct underlying function is used -- sometimes this requires unnatural definitions.
 
-\paragraph{GRIN} The GRIN approach \cite{grin} is currently being implemented in the JHC compiler \cite{JHC}, with promising initial results. GRIN works by first translating to a monadic intermediate language, then repeatedly performing a series of optimisations, using whole program transformation. The intermediate language is at a much lower level than our Core language, so it is able to express detailed optimisations that we are unable to.
+\paragraph{GRIN} The GRIN approach \cite{grin} is currently being implemented in the jhc compiler \cite{jhc}, with promising initial results. GRIN works by first translating to a monadic intermediate language, then repeatedly performing a series of optimisations, using whole program transformation. The intermediate language is at a much lower level than our Core language, so it is able to express detailed optimisations that we are unable to.
 
 \paragraph{Other Transformations} Our work makes use of, or subsumes many other transformations in functional programming. One of the central operations within our optimisation in inlining, a technique that has been used extensively within GHC \cite{spj:inlining}. We generalise the constructor specialisation technique \cite{spj:specconstr}, by allowing specialisation on any arbitrary expression, including constructors. One optimisation we do not currently support is the use of user provided transformation rules \cite{spj:rules}, which can be used to automatically replace certain expressions with others -- for example |sort . nub| removes duplicates then sorts a list, but can be done asymptotically faster in a single operation.
 
-\paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but once optimal Core has been generated there is still some work before optimal machine code has been produced. One critical pair of optimisations are strictness analysis \cite{strictness} and unboxing \cite{spj:unboxing} -- detecting that a value is always used strictly, then removing the indirection that laziness requires. In GHC both of these optimisations are done at the Core level, using a Core language extended with the unboxed kind. After this lower level Core has been generated, it is then transformed in to STG machine instructions \cite{spj:stg}, before being transformed into assembly code. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{dynamic tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
+\paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but once optimal Core has been generated there is still some work before optimal machine code has been produced. One critical pair of optimisations are strictness analysis and unboxing \cite{spj:unboxing} -- detecting that a value is always used strictly, then removing the indirection that laziness requires. In GHC both of these optimisations are done at the Core level, using a Core language extended with the unboxed kind. After this lower level Core has been generated, it is then transformed in to STG machine instructions \cite{spj:stg}, before being transformed into assembly code. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
 
 \section{Conclusion and Future Work}
 
@@ -520,7 +520,7 @@ We have introduced an optimiser, which is capable of outperforming the GHC compi
 
 The shootout has shown that low-level Haskell can compete with with low-level imperative language such as C. Our goal is that Haskell programs can be written in a high-level declarative style, yet still perform competitively.
 
-\paragraph{Acknowledgements} Thanks to Simon Peyton Jones, Simon Marlow and Tim Chevalier for help understanding the low-level details of GHC.
+\paragraph{Acknowledgements} Thanks to Simon Peyton Jones, Simon Marlow and Tim Chevalier for help understanding the low-level details of GHC. Thanks to Peter Jonsson for helpful discussions.
 
 \bibliographystyle{plain}
 
