--- a/academic/ifl2007/supero.tex
+++ b/academic/ifl2007/supero.tex
@@ -25,20 +25,20 @@
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-Haskell is a high level functional language, with features like higher order functions and lazy evaluation, which allow succinct representations of programs. These high level features can result in poor runtime speed of generated code, if care is not taken. This paper presents a whole program approach to transformation, which enables substantial speed improvements relative to the GHC, a mature optimising compiler.
+Haskell is a functional language, with features like higher order functions and lazy evaluation, which allow succinct representations of programs. These high-level features can result in poor runtime speed, if care is not taken. This paper presents a whole program approach to optimisation, which produces speed improvements of between 10\% and 60\% relative to the GHC, on a small number of benchmarks.
 \end{abstract}
 
 \section{Introduction}
 
-Haskell \cite{haskell} can be used to write high level specifications of programs, which can run. Take for example the task of counting the number of words in a file read from the input. In Haskell this program is a single line:
+Haskell \cite{haskell} can be used in a highly declarative manner, to directly express specifications which are themselves executable. Take for example the task of counting the number of words in a file read from the standard input. In Haskell, one could write:
 
 \begin{code}
 main = print . length . words =<< getContents
 \end{code}
 
-The |getContents| function reads the input as a list of characters, |words| splits this list into a list of words, |length| counts the number of words, and finally |print| writes the value to the screen. The use of |(=<<)| is merely to do sequence the actions, and can be ignored for those unfamiliar with Haskell and monadic IO.
+The |getContents| function reads the input as a list of characters, |words| splits this list into a list of words, |length| counts the number of words, and finally |print| writes the value to the screen. The use of |(=<<)| is merely to sequence the actions, and can be ignored for those unfamiliar with Haskell and monadic IO.
 
-Compared to a C program to perform this task (see Figure \ref{fig:c_words}), the Haskell version is more concise, more specification orientated and easier to convince others of its correctness. Unfortunately with all these good points,  it is also three times slower than the C version.
+An equivalent C program is given in Figure \ref{fig:c_words}. Compared to the C program, the Haskell version is more concise, more specification orientated and easier to convince others of its correctness. Unfortunately, it is also three times slower than the C version.
 
 \begin{fig}
 \bigskip
@@ -65,20 +65,21 @@ int main()
 There are several reasons that the Haskell version does not perform at the same speed as the C version:
 
 \begin{description}
-\item[Intermediate Lists] One of the reasons for the slowdown in the Haskell version is that many intermediate lists are produced and consumed as the program proceeds. The |getContents| function produces a list of characters, |words| consumes this list and produces a list of a list of characters, |length| then consumes the outermost list. The equivalent C program has no allocation.
-\item[Higher Order Arguments] The |words| function is defined using the function |span|, which takes a predicate and splits the input list when the predicate becomes true. The predicate is passed as a higher order function, which is constant on all applications.
-\item[Laziness] The Haskell program proceeds in a lazy manner, demanding one character from |getContents|, then processing it with each of the functions in the pipeline. At each stage, a lazy thunk for the remainder of the function is created.
+\item[Intermediate Lists] The Haskell program produces and consumes many intermediate lists as it computes the result. The |getContents| function produces a list of characters, |words| consumes this list and produces a list of a list of characters, |length| then consumes the outermost list. The C version has no allocation.
+\item[Higher Order Arguments] The |words| function is defined using the function |span|, which takes a predicate and splits the input list when the predicate becomes true. The predicate is passed as a higher order function, which is constant in all applications of |span|.
+\item[Laziness] The Haskell program proceeds in a lazy manner, demanding one character from |getContents|, then processing it with each of the functions in the pipeline. At each stage, a lazy thunk for the remainder of each function is created.
 \end{description}
 
 By using the optimiser developed in this paper we can eliminate all these overheads, resulting in a program that performs \textit{faster} than the equivalent C version. The central idea of the optimiser is that we attempt to evaluate as much of the program at compile time as possible, leaving a residual program consisting of only actions dependent on the input data.
 
-Our goal is to make high-level Haskell programs perform as fast as low-level Haskell programs, eliminating the need to optimise Haskell programs in the kind of detail currently required for high performance programs. We require no annotations on any part of the program, even library functions, in contrast to other approaches.
+Our goal is to make high-level Haskell programs perform as fast as low-level Haskell programs, eliminating the need to optimise Haskell programs in the kind of detail currently required for some high performance programs. We require no annotations on any part of the program, including the library functions.
 
 \subsection{Roadmap}
 
-Insert here
+We first introduce a Core language in \S\ref{sec:core}, on which all transformations are applied. Next we describe our optimisation method in \S\ref{sec:optimisation}. We then give a number of benchmarks, comparing both against C in \S\ref{sec:c_results} and Haskell in \S\ref{sec:haskell_results}. Finally, we review related work in \S\ref{sec:related} and conclude in \S\ref{sec:conclusion}.
 
 \section{Core Language}
+\label{sec:core}
 
 \begin{fig}
 \begin{code}
@@ -109,6 +110,7 @@ The primary difference between our Core language and that of the GHC compiler \c
 In order to avoid accidental variable name clashes while performing transformations, we demand that all variables within a program are unique. All transformations may assume this invariant, and must ensure it as a postcondition.
 
 \section{Optimisation}
+\label{sec:optimisation}
 
 Our optimisation procedure takes a Core program as input, and produces a new Core program, that has the same effect as the original -- hopefully with improved performance. We do not make small changes to the original program, but instead evaluate some of the program at compile time, leaving a residual program to be run.
 
@@ -119,7 +121,7 @@ Each function in the output program is associated with an expression in the inpu
 _O\<case x of alts_  \> =  case _O\<x\> \? of alts_
 _O\<let v = x in y   \> =  let v = _O\<x\> \? in _O\<y\>
 _O\<x y              \> =  _O\<x\> \? y
-_O\<function         \> =  _O\<unfold f\>
+_O\<f                \> =  _O\<unfold f\>
                            where f {-" \hbox{ is a non-primitive, non-CAF function} "-}
 _O\<x                \> =  x
 \end{code}
@@ -175,7 +177,7 @@ let v = c x_1 ... x_n in y
 \label{fig:simplify}
 \end{fig}
 
-The optimisation of an expression is performed using the |_O| function in Figure \ref{fig:evaluate}, and the simplification rules in Figure \ref{fig:simplify}. We define |_OO| to be the fixed point of applying both |_O| and the simplification rules. The |_O| function proceeds much like evaluation at run time, but stops if the next expression to reduce is a free variable, a constructor, a primitive, or a CAF (constant applicative form -- see \S\ref{sec:caf} for more details). The one difference is that in a |let| expression the bound variable and the inner expression are \textit{both} optimised -- see \S\ref{sec:let}.
+The optimisation of an expression is performed using the |_O| function in Figure \ref{fig:optimise}, and the simplification rules in Figure \ref{fig:simplify}. We define |_OO| to be the fixed point of applying both |_O| and the simplification rules. The |_O| function proceeds much like evaluation at run time, but stops if the next expression to reduce is a free variable, a constructor, a primitive, or a CAF (constant applicative form -- see \S\ref{sec:caf} for more details). The one difference is that in a |let| expression the bound variable and the inner expression are \textit{both} optimised -- see \S\ref{sec:let}.
 
 Let us take a simple example:
 
@@ -261,7 +263,7 @@ This function is the standard |reverse| function, with an accumulator. The probl
 
 The solution is to bound the size of the input expression associated with each function. The size of the expression being optimised can be reduced by lifting some aspect of the expression into a let binding, then placing this let binding in the residual program. By bounding the size of the expression, we bound the number of functions in the residual program.
 
-If the bound is too high, optimisation will take programs will take too long, the residual program will be excessively large and some functions will have too many arguments. If the bound is too low then we will have limited optimisation. We will come back to the issue of the size of this bound in the results sections \ref{sec:haskell_results}.
+If the bound is too high, optimisation will take programs will take too long, the residual program will be excessively large and some functions will have too many arguments. If the bound is too low then we will have limited optimisation. We will come back to the issue of the size of this bound in \S\ref{sec:results_bound}.
 
 \subsubsection{Direct Repetition}
 
@@ -319,6 +321,7 @@ main = caf + caf
 In this program |caf| would only be computed once. If a CAF function is inlined then this may result in a computation being performed more than would otherwise occur. To ensure that we do not duplicate computations, we never inline CAF's.
 
 \section{Benchmarks Versus C}
+\label{sec:c_results}
 
 The most comprehensive inter-language benchmarking effort is the Programming Language Shootout shootout\footnote{\url{http://shootout.alioth.debian.org/}}. In the shootout a variety of programming tasks are implemented in many languages and benchmarked against each other. Unfortunately, in order to ensure a balanced comparison, many restrictions are placed on the programs -- some of which severely hamper lazy languages. Inspired by their attempt, we have attempted to define some simpler benchmarks on which it is possible to directly compare Haskell to C.
 
@@ -422,6 +425,7 @@ The most curious result is that Supero outperforms C on wordcounting, by about 6
 Unfortunately, in C it is quite challenging to capture the required flow control! The program needs two loops, where both loops can transition to the other. Using the |goto| keyword is not appropriate, as typically this turns off many critical optimisations in the C compiler. Tail recursion is certainly not appropriate, as it is not required by the C standard (nor supported in most compilers). The only way to express the necessary pattern is using nested while loops, but unlike newer imperative languages such as Java, C does not have named loops -- so the inner loop cannot break from the outer loop if it reaches the end of the file. The only solution is to place the nested while loops in a function, and use |return| to break from the inner loop. This solution would not scale to a three-valued control structure, and substantially increases the complexity of the code.
 
 \section{Benchmarks Versus Haskell}
+\label{sec:haskell_results}
 
 The standard set of Haskell benchmarks is the nofib suite \cite{nofib}. The nofib suite is divided into three categories of increasing size: imaginary, spectral and real. Many small Haskell programs increase in size substantially once the libraries are included, particularly when type classes are involved. Because of the relatively large size of even small examples, we have limited our focus to five benchmarks drawn from the imaginary section. We have deliberately chosen programs which do not perform large amounts of IO, but instead are compute bound programs.
 The benchmarks are: digits-of-e1 and digits-of-e2, both of which compute the digits of |e|, by different methods; exp3\_8 performs |3^8| using peano numbers and the |Num| class; primes computes a list of prime numbers; and queens counts the possible safe layouts of queen pieces on a chess board. All benchmarks were run with parameters to ensure runtimes of between 3 and 5 seconds for GHC.
@@ -491,12 +495,14 @@ For these benchmarks it is important to clarify which optimisations are being pe
 Supero has no special purpose optimisations which rely on named functions or desugaring knowledge. The one place where no GHC specific optimisations apply is the exp3\_8 benchmark, which operates solely on peano numbers -- a type GHC has no inbuilt knowledge of. This property explains the performance advantages shown by Supero in exp3\_8, while GHC was limited to basic inline/simplify transformations, Supero managed to perform some limited fusion.
 
 \subsection{Termination Bound}
+\label{sec:results_bound}
 
 Table \ref{tab:haskell_results} includes a column indicating the size bound that was applied to expressions. Out of the five benchmarks, both primes and queens could be run at any greater bound and would still produce the same program -- the direct repetition criteria bounds the expressions on its own. For the remaining programs, a bound was chosen which to ensure that the compilation process was quick (under two seconds). By increasing the termination bound the size of the generated program would increase, but potentially the generated program would execute faster.
 
 The existence of a termination bound with the present degree of sensitivity is a cause for concern. In a large program it is likely that different parts of the program would require different bounds on the size of the generated expression -- something not currently possible. We suspect that the most promising direction is to augment the direct repetition criteria, and hope to obtain termination in all practical cases without resorting to a depth bound.
 
 \section{Related Work}
+\label{sec:related}
 
 \paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. Typically the emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with a partial program to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work that partial evaluation is that we do fold back definitions, and perform no binding time analysis. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements.
 
@@ -509,13 +515,14 @@ The existence of a termination bound with the present degree of sensitivity is a
 \paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but once optimal Core has been generated there is still some work before optimal machine code has been produced. One critical pair of optimisations are strictness analysis and unboxing \cite{spj:unboxing} -- detecting that a value is always used strictly, then removing the indirection that laziness requires. In GHC both of these optimisations are done at the Core level, using a Core language extended with the unboxed kind. After this lower level Core has been generated, it is then transformed in to STG machine instructions \cite{spj:stg}, before being transformed into assembly code. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
 
 \section{Conclusion and Future Work}
+\label{sec:conclusion}
 
 We have introduced an optimiser, which is capable of outperforming the GHC compiler in a limited number of benchmarks. Our optimiser is simple (only 300 lines of Haskell), and yet is able to replicate many of the performance enhancements of GHC in a more general way. While our initial results are promising, they are still incomplete. There are three main obstacles that need to be tackled:
 
 \begin{description}
 \item[Termination] While we our confident that our compiler terminates, it is only by use of a crude depth bound whose appropriate value varies for different programs. In order to increase the applicability of our optimiser, we would like to either remove the depth bound, or reduce our reliance upon it.
 \item[Benchmarks] We have presented eight benchmarks, and showed promising results on all of them. However, eight benchmarks is not nearly enough. We would like to obtain results on all the remaining benchmarks in the nofib suite.
-\item[Performance] The performance results present in \S\ref{sec:haskell_results} are not the best we have achieved -- during experimentation we were able to obtain a 50\% speed up in the primes benchmark. We suspect that much better performance can be obtained.
+\item[Performance] The performance results presented in \S\ref{sec:haskell_results} are not the best we have achieved -- during experimentation we were able to obtain a 50\% speed up in the primes benchmark. We suspect that much better performance can be obtained.
 \end{description}
 
 The shootout has shown that low-level Haskell can compete with with low-level imperative language such as C. Our goal is that Haskell programs can be written in a high-level declarative style, yet still perform competitively.
